Удаляет путь к декоративным элементам в категориях.

--- a/catalog.html
+++ b/catalog.html
@@ -12,25 +12,18 @@
     </a>
     <nav class="main-navigation">
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
-        <label for="catalogue-search" class="visually-hidden">
-          <img src="images/icons/search.svg" width="16" height="16" alt="Текст поиска">
-        </label>
+        <label for="catalogue-search" class="visually-hidden">Текст поиска</label>
         <input name="search-text" type="text" id="catalogue-search" placeholder="Текст поиска">
         <input name="search" type="submit" id="search-id" value="Найти">
       </form>
       <button name="button log-on" type="button">
         <span class="log-on-span">Войти</span>
-        <img class="login-icon" src="images/icons/login.svg" width="13" height="12" alt="#">
       </button>
-      <a class="compare" href="#">Сравнить
-        <img class="sort-icon" src="images/icons/sort.svg" width="10" height="12" alt="#">
-      </a>
-      <a class="shopping-cart" href="#">Корзина
-        <img class="cart-icon" src="images/icons/cart.svg" width="16" height="14" alt="#">
-      </a>
+      <a class="compare" href="#">Сравнить</a>
+      <a class="shopping-cart" href="#">Корзина</a>
 
       <button class="button button-search" type="button">
-        <span class="catalogue-button">КАТАЛОГ ТОВАРОВ</span>
+        <span class="visually-hidden">КАТАЛОГ ТОВАРОВ</span>
       </button>
       <ul class="navigation-menu">
         <li class="navigation-menu-item">
@@ -113,20 +106,15 @@
       </form>
 
       <select class="select-control" aria-label="Сортировка">
-        <button class="select-button" type="button">
-          <img class="arron-left-icon" src="images/icons/arrow-down.svg" width="12" height="7" alt="Отсортировать">
-        </button>
         <option value="popular">Популярное</option>
         <option value="new-products">Новинки</option>
         <option value="price">Цена</option>
       </select>
-      <a class="button button-light" href="#">
-<!--        <span class="visually-hidden">От наилучших</span>-->
-        <img src="images/icons/arrow-up-bold.svg" width="11" height="10" alt="От наилучших">
+      <a href="#" class="button button-light">
+        <span class="visually-hidden">От наилучших</span>
       </a>
-      <a class="button button-light" href="#">
-<!--        <span class="visually-hidden">От наихудших</span>-->
-        <img src="images/icons/arrow-down-bold.svg" width="11" height="10" alt="От наихудших">
+      <a class="button" href="#">
+        <span class="visually-hidden">От наихудших</span>
       </a>
 
       <ol class="product-list">
@@ -202,9 +190,7 @@
     <h2 class="visually-hidden">Давайте дружить</h2>
     <address>
       <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
-        реки Карповки, 5, литера П.
-        <img src="images/icons/divider-yellow.svg" width="80" height="8" alt="#">
-      </p>
+        реки Карповки, 5, литера П.</p>
       <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
     </address>
     <ul class="navigation-menu menu-footer">
@@ -221,25 +207,22 @@
     <ul class="footer-social-list">
       <li class="footer-social-item">
         <a class="button" href="https://t.me/htmlacademy" target="_blank">
-          <!--          <span class="visually-hidden">Telegram</span>-->
-          <img src="images/icons/telegram.svg" width="14" height="12" alt="Наш телеграмм">
+          <span class="visually-hidden">Telegram</span>
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
-          <!--          <span class="visually-hidden">YouTube</span>-->
-          <img src="images/icons/youtube.svg" width="16" height="11" alt="Наш Ютуб">
+          <span class="visually-hidden">YouTube</span>
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://twitter.com/htmlacademy_ru" target="_blank">
-          <!--          <span class="visually-hidden">Twitter</span>-->
-          <img src="images/icons/twitter.svg" width="16" height="14" alt="Наш Твиттер">
+          <span class="visually-hidden">Twitter</span>
         </a>
       </li>
     </ul>
     <a class="htmlacademy-link" href="https://htmlacademy.ru/" target="_blank">
-      <img src="images/logo-htmlacademy.svg" width="115" height="34" alt="#">
+      <img src="images/logo-htmlacademy.svg" width="115" height="34" alt="Логотип онлайн-школы «HTML Academy»">
     </a>
   </footer>
 </body>
