--- a/index.html
+++ b/index.html
@@ -13,22 +13,15 @@
     </a>
     <nav class="main-navigation">
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
-        <label for="catalogue-search" class="visually-hidden">
-          <img src="images/icons/search.svg" width="16" height="16" alt="Текст поиска">
-        </label>
+        <label for="catalogue-search" class="visually-hidden">Текст поиска</label>
         <input name="search-text" type="text" id="catalogue-search" placeholder="Текст поиска">
         <input name="search" type="submit" id="search-id" value="Найти">
       </form>
       <button name="button log-on" type="button">
         <span class="log-on-span">Войти</span>
-        <img class="login-icon" src="images/icons/login.svg" width="13" height="12" alt="#">
       </button>
-      <a class="compare" href="#">Сравнить
-        <img class="sort-icon" src="images/icons/sort.svg" width="10" height="12" alt="#">
-      </a>
-      <a class="shopping-cart" href="#">Корзина
-        <img class="cart-icon" src="images/icons/cart.svg" width="16" height="14" alt="#">
-      </a>
+      <a class="compare" href="#">Сравнить</a>
+      <a class="shopping-cart" href="#">Корзина</a>
 
       <button class="button button-search" type="button">
         <span class="catalogue-button">КАТАЛОГ ТОВАРОВ</span>
@@ -54,11 +47,9 @@
       <h2 class="visually-hidden">Лучшие товары магазина</h2>
       <button class="slider-button slider-prev" type="button">
         <span class="visually-hidden">Предыдущее фото</span>
-        <img class="arron-left-icon" src="images/icons/left-tall-arrow.svg" width="20" height="61" alt="#">
       </button>
       <button class="slider-button slider-next" type="button">
         <span class="visually-hidden">Следующее фото</span>
-        <img class="arron-right-icon" src="images/icons/right-tall-arrow.svg" width="20" height="61" alt="#">
       </button>
       <div class="slider-quadcopter">
         <h3 class="visually-hidden">Товар Квадрокоптер</h3>
@@ -128,38 +119,32 @@
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Виртуальная<br>
               реальность</h3>
-            <img src="images/category/category-1.svg" width="160" height="160" alt="Виртуальная реальность">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="catalog.html">
             <h3 class="product-category-subtitle">Моноподы<br>
               для селфи</h3>
-            <img src="images/category/category-2.svg" width="160" height="160" alt="Моноподы для селфи">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Экшн-камеры</h3>
-            <img src="images/category/category-3.svg" width="160" height="160" alt="Экшн-камеры">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Фитнес-браслеты</h3>
-            <img src="images/category/category-4.svg" width="160" height="160" alt="Фитнес-браслеты">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Умные часы</h3>
-            <img src="images/category/category-5.svg" width="160" height="160" alt="Умные часы">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Квадрокоптеры</h3>
-            <img src="images/category/category-6.svg" width="160" height="160" alt="Квадрокоптеры">
           </a>
         </li>
       </ul>
@@ -176,7 +161,6 @@
           <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо
             к вашему подъезду совершенно бесплатно! Ведь
             мы неплохо заработаем, поднимая его на ваш этаж.</p>
-          <img src="images/delivery-1.svg" width="136" height="165" alt="#">
         </li>
         <li>
           <button class="advantages-item-button" type="button">
@@ -186,7 +170,6 @@
           <p class="advantages-description">Если из-за возгорания купленного у нас товара у вас
             сгорит дом — не переживайте, мы выдадим вам новый.
             Товар, не дом, конечно же.</p>
-          <img src="images/warranty-2.svg" width="171" height="195" alt="#">
         </li>
         <li>
           <button class="advantages-item-button" type="button">
@@ -195,16 +178,12 @@
           <h3 class="advantages-item">Кредит</h3>
           <p class="advantages-description">Залезть в долговую яму стало проще!
             Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
-          <img src="images/credit-3.svg" width="156" height="189" alt="#">
         </li>
       </ul>
     </section>
 
     <div class="scarce-commodity">
-      <a class="delivery-special-offer" href="#">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ
-        <img src="images/icons/delivery.svg" width="47" height="32" alt="#">
-        <img src="images/icons/i.svg" width="2" height="12" alt="#">
-      </a>
+      <a class="delivery-special-offer" href="#">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ</a>
     </div>
 
     <section class="companies">
@@ -240,9 +219,7 @@
         на рассылку</h2>
       <p class="newsletter-description">Еженедельный дайджест с обзорами новинок,<br>
         длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
-      <p class="newsletter-tick">Это бесплатно
-       <img src="images/icons/tick-big.svg" width="14" height="14" alt="#">
-      </p>
+      <p class="newsletter-tick">Это бесплатно</p>
       <form class="newsletter-subscriber" action="https://echo.htmlacademy.ru/" method="post">
         <input type="email" name="newsletter-email" id="newsletter-mail" placeholder="Ваш e-mail">
         <input type="submit" value="ПОДПИСАТЬСЯ">
@@ -255,9 +232,7 @@
     <h2 class="visually-hidden">Давайте дружить</h2>
     <address>
       <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
-        реки Карповки, 5, литера П.
-      <img src="images/icons/divider-yellow.svg" width="80" height="8" alt="#">
-      </p>
+        реки Карповки, 5, литера П.</p>
       <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
     </address>
     <ul class="navigation-menu menu-footer">
@@ -274,25 +249,22 @@
     <ul class="footer-social-list">
       <li class="footer-social-item">
         <a class="button" href="https://t.me/htmlacademy" target="_blank">
-<!--          <span class="visually-hidden">Telegram</span>-->
-          <img src="images/icons/telegram.svg" width="14" height="12" alt="Наш телеграмм">
+          <span class="visually-hidden">Telegram</span>
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
-<!--          <span class="visually-hidden">YouTube</span>-->
-          <img src="images/icons/youtube.svg" width="16" height="11" alt="Наш Ютуб">
+          <span class="visually-hidden">YouTube</span>
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://twitter.com/htmlacademy_ru" target="_blank">
-<!--          <span class="visually-hidden">Twitter</span>-->
-          <img src="images/icons/twitter.svg" width="16" height="14" alt="Наш Твиттер">
+          <span class="visually-hidden">Twitter</span>
         </a>
       </li>
     </ul>
     <a class="htmlacademy-link" href="https://htmlacademy.ru/" target="_blank">
-      <img src="images/logo-htmlacademy.svg" width="115" height="34" alt="#">
+      <img src="images/logo-htmlacademy.svg" width="115" height="34" alt="Логотип онлайн-школы «HTML Academy»">
     </a>
   </footer>
 </body>
