:heavy_check_mark: Сборка #3

--- a/3/index.html
+++ b/3/index.html
@@ -4,12 +4,13 @@
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="icon" href="images/favicon.ico">
   <base href="https://htmlacademy-htmlcss.github.io/2049649-device-34/3/">
 </head>
 <body>
   <header class="page-header">
     <a class="navigation-logo" href="index.html">
-      <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+      <img class="logo" src="images/logo-device.svg" width="145" height="37" alt="Логотип интернет-магазина «Девайс»">
     </a>
     <nav class="main-navigation">
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -119,38 +120,32 @@
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Виртуальная<br>
               реальность</h3>
-            <img src="#" width="160" height="160" alt="Виртуальная реальность">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="catalog.html">
             <h3 class="product-category-subtitle">Моноподы<br>
               для селфи</h3>
-            <img src="#" width="160" height="160" alt="Моноподы для селфи">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Экшн-камеры</h3>
-            <img src="#" width="160" height="160" alt="Экшн-камеры">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Фитнес-браслеты</h3>
-            <img src="#" width="160" height="160" alt="Фитнес-браслеты">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Умные часы</h3>
-            <img src="#" width="160" height="160" alt="Умные часы">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Квадрокоптеры</h3>
-            <img src="#" width="160" height="160" alt="Квадрокоптеры">
           </a>
         </li>
       </ul>
@@ -234,7 +229,7 @@
   </main>
 
   <footer class="main-footer">
-    <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+    <img class="logo" src="images/logo-yellow.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
     <h2 class="visually-hidden">Давайте дружить</h2>
     <address>
       <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
@@ -269,7 +264,9 @@
         </a>
       </li>
     </ul>
-    <a class="htmlacademy-link" href="https://htmlacademy.ru/" target="_blank">.html academy</a>
+    <a class="htmlacademy-link" href="https://htmlacademy.ru/" target="_blank">
+      <img src="images/logo-htmlacademy.svg" width="115" height="34" alt="Логотип онлайн-школы «HTML Academy»">
+    </a>
   </footer>
 </body>
 </html>
