--- a/3/catalog.html
+++ b/3/catalog.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс-каталог</title>
+  <link rel="icon" href="images/favicon.ico">
   <base href="https://htmlacademy-htmlcss.github.io/2049649-device-34/3/">
 </head>
 <body>
   <header class="page-header">
     <a class="navigation-logo" href="index.html">
-      <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+      <img class="logo" src="images/logo-device.svg" width="145" height="37" alt="Логотип интернет-магазина «Девайс»">
     </a>
     <nav class="main-navigation">
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -120,7 +121,7 @@
       <ol class="product-list">
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/selfies-catalog/amateur-selfies.jpg" width="360" height="380" alt="Любительская селфи-палка">
+            <img class="product-card-image" src="images/catalog/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
             <h3 class="product-card-title">Любительская<br>
               селфи-палка</h3>
           </a>
@@ -129,7 +130,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/selfies-catalog/professional-selfies.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+            <img class="product-card-image" src="images/catalog/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             <h3 class="product-card-title">Профессиональная селфи-палка</h3>
           </a>
           <span class="product-card-price">1 500 ₽</span>
@@ -137,7 +138,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/selfies-catalog/unsinkable-selfies.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+            <img class="product-card-image" src="images/catalog/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             <h3 class="product-card-title">Непотопляемая<br>
               селфи-палка</h3>
           </a>
@@ -146,7 +147,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/selfies-catalog/follow-me-selfies.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+            <img class="product-card-image" src="images/catalog/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
             <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
           </a>
           <span class="product-card-price">1 500 ₽</span>
@@ -186,7 +187,7 @@
   </main>
 
   <footer class="main-footer">
-    <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+    <img class="logo" src="images/logo-yellow.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
     <h2 class="visually-hidden">Давайте дружить</h2>
     <address>
       <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
@@ -221,7 +222,9 @@
         </a>
       </li>
     </ul>
-    <a class="htmlacademy-link" href="https://htmlacademy.ru/" target="_blank">.html academy</a>
+    <a class="htmlacademy-link" href="https://htmlacademy.ru/" target="_blank">
+      <img src="images/logo-htmlacademy.svg" width="115" height="34" alt="Логотип онлайн-школы «HTML Academy»">
+    </a>
   </footer>
 </body>
 </html>
