Добавляет оформление текста в header, body;

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
       <button name="button log-on" type="button">
         <span class="log-on-span">Войти</span>
       </button>
-      <a class="compare" href="#">Сравнить</a>
-      <a class="shopping-cart" href="#">Корзина</a>
+      <a class="user-menu" href="#">Сравнить</a>
+      <a class="user-menu" href="#">Корзина</a>
 
-      <button class="button button-search" type="button">
-        <span class="catalogue-button">КАТАЛОГ ТОВАРОВ</span>
-      </button>
-      <ul class="navigation-menu">
-        <li class="navigation-menu-item">
-          <a class="delivery-navigation-link" href="#">Доставка</a>
-        </li>
-        <li class="navigation-menu-item">
-          <a class="warranty-navigation-link" href="#">Гарантия</a>
-        </li>
-        <li class="navigation-menu-item">
-          <a class="contacts-navigation-link" href="#">Контакты</a>
-        </li>
-      </ul>
+        <button class="button button-search" type="button">
+          <span class="catalogue-button">КАТАЛОГ ТОВАРОВ</span>
+        </button>
+        <ul class="navigation-menu">
+          <li class="navigation-menu-item">
+            <a class="navigation-link" href="#">Доставка</a>
+          </li>
+          <li class="navigation-menu-item">
+            <a class="navigation-link" href="#">Гарантия</a>
+          </li>
+          <li class="navigation-menu-item">
+            <a class="navigation-link" href="#">Контакты</a>
+          </li>
+        </ul>
     </nav>
   </header>
 
