Добавляет оформление текста в слайдерах, категориях, преимуществах, контактах; Добавляет background в футере; Изменяет в index некоторые классы для упрещенности;

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header class="page-header">
     <a class="navigation-logo" href="index.html">
-      <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+      <img class="logo" src="images/logo-device.svg" width="145" height="37" alt="Логотип интернет-магазина «Девайс»">
     </a>
     <nav class="main-navigation">
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -57,11 +57,11 @@
         <p class="slider-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
           замаскированным под стандартную камеру.</p>
         <a class="button" href="#">ПОДРОБНЕЕ</a>
-        <dl class="quadcopter-list">
-          <dt class="quadcopter-term">Дальность полета</dt>
-          <dd class="quadcopter-def">800 м</dd>
-          <dt class="quadcopter-term">Радиус поражения</dt>
-          <dd class="quadcopter-def">50 м</dd>
+        <dl class="features-list">
+          <dt class="features-term">Дальность полета</dt>
+          <dd class="features-def">800 м</dd>
+          <dt class="features-term">Радиус поражения</dt>
+          <dd class="features-def">50 м</dd>
         </dl>
       </div>
       <div class="slider-watch">
@@ -71,9 +71,9 @@
         <p class="slider-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
           соблюдать диету.</p>
         <a class="button" href="#">ПОДРОБНЕЕ</a>
-        <dl class="quadcopter-list">
-          <dt class="quadcopter-term">48 часов</dt>
-          <dd class="quadcopter-def">Без подзарядки</dd>
+        <dl class="features-list">
+          <dt class="features-def">48 часов</dt>
+          <dd class="features-term">Без подзарядки</dd>
         </dl>
       </div>
       <div class="slider-selfies">
@@ -83,13 +83,13 @@
         <p class="slider-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
           метров длиной и весом всего 5 кг.</p>
         <a class="button" href="catalog.html">ПОДРОБНЕЕ</a>
-        <dl class="selfies-list">
-          <dt class="selfies-term">Длина палки</dt>
-          <dd class="selfies-def">8,5 м</dd>
-          <dt class="selfies-term">Вес палки</dt>
-          <dd class="selfies-def">5 кг</dd>
-          <dt class="selfies-term">Материал</dt>
-          <dd class="selfies-def">Карбон</dd>
+        <dl class="features-list">
+          <dt class="features-term">Длина палки</dt>
+          <dd class="features-def">8,5 м</dd>
+          <dt class="features-term">Вес палки</dt>
+          <dd class="features-def">5 кг</dd>
+          <dt class="features-term">Материал</dt>
+          <dd class="features-def">Карбон</dd>
         </dl>
       </div>
       <ol class="slider-pagination">
@@ -207,7 +207,7 @@
       <h2 class="contacts-title">Контакты</h2>
       <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис.</p>
       <p class="contacts-description">Заодно сможете проверить работоспособность покупки. </p>
-      <h3>Интернет-магазин «Девайс»</h3>
+      <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
       <address class="contacts-address">
         <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
         <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
@@ -236,7 +236,7 @@
     <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
     <h2 class="visually-hidden">Давайте дружить</h2>
     <address>
-      <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
+      <p class="footer-contacts-address">Санкт-Петербург, набережная<br>
         реки Карповки, 5, литера П.</p>
       <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
     </address>
