Меняет input на button с типом сабмит; Добавляет оформление к кнопкам и футере;

--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
         <label for="catalogue-search" class="visually-hidden">Текст поиска</label>
         <input name="search-text" type="text" id="catalogue-search" placeholder="Текст поиска">
-        <input name="search" type="submit" id="search-id" value="Найти">
+        <button class="search-button" type="submit">Найти</button>
       </form>
-      <button name="button log-on" type="button">
-        <span class="log-on-span">Войти</span>
-      </button>
+      <a class="user-menu" href="#">Войти</a>
       <a class="user-menu" href="#">Сравнить</a>
       <a class="user-menu" href="#">Корзина</a>
 
-        <button class="button button-search" type="button">
-          <span class="catalogue-button">КАТАЛОГ ТОВАРОВ</span>
+        <button class="catalogue-button" type="button">
+          <span class="catalogue-span">КАТАЛОГ ТОВАРОВ</span>
         </button>
         <ul class="navigation-menu">
           <li class="navigation-menu-item">
@@ -227,7 +225,7 @@
       <p class="newsletter-tick">Это бесплатно</p>
       <form class="newsletter-subscriber" action="https://echo.htmlacademy.ru/" method="post">
         <input type="email" name="newsletter-email" id="newsletter-mail" placeholder="Ваш e-mail">
-        <input type="submit" value="ПОДПИСАТЬСЯ">
+        <button class="email-button" type="submit">ПОДПИСАТЬСЯ</button>
       </form>
     </section>
   </main>
@@ -242,28 +240,28 @@
     </address>
     <ul class="navigation-menu menu-footer">
       <li class="delivery-navigation-item menu-footer-item">
-        <a class="delivery-navigation-link menu-footer-link" href="#">Доставка</a>
+        <a class="navigation-link menu-footer-link" href="#">Доставка</a>
       </li>
       <li class="warranty-navigation-item menu-footer-item">
-        <a class="warranty-navigation-link menu-footer-link" href="#">Гарантия</a>
+        <a class="navigation-link menu-footer-link" href="#">Гарантия</a>
       </li>
       <li class="contacts-navigation-item menu-footer-item">
-        <a class="contacts-navigation-link menu-footer-link" href="#">Контакты</a>
+        <a class="navigation-link menu-footer-link" href="#">Контакты</a>
       </li>
     </ul>
     <ul class="footer-social-list">
       <li class="footer-social-item">
-        <a class="button" href="https://t.me/htmlacademy" target="_blank">
+        <a class="button media" href="https://t.me/htmlacademy" target="_blank">
           <span class="visually-hidden">Telegram</span>
         </a>
       </li>
       <li class="footer-social-item">
-        <a class="button" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
+        <a class="button media" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
           <span class="visually-hidden">YouTube</span>
         </a>
       </li>
       <li class="footer-social-item">
-        <a class="button" href="https://twitter.com/htmlacademy_ru" target="_blank">
+        <a class="button media" href="https://twitter.com/htmlacademy_ru" target="_blank">
           <span class="visually-hidden">Twitter</span>
         </a>
       </li>
