Добавляет классы к input, меняет их стилизацию;

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="main-navigation">
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
         <label for="catalogue-search" class="visually-hidden">Текст поиска</label>
-        <input name="search-text" type="text" id="catalogue-search" placeholder="Текст поиска">
+        <input class="search-input" name="search-text" type="text" id="catalogue-search" placeholder="Текст поиска">
         <button class="search-button" type="submit">Найти</button>
       </form>
       <a class="user-menu" href="#">Войти</a>
@@ -224,7 +224,7 @@
         длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
       <p class="newsletter-tick">Это бесплатно</p>
       <form class="newsletter-subscriber" action="https://echo.htmlacademy.ru/" method="post">
-        <input type="email" name="newsletter-email" id="newsletter-mail" placeholder="Ваш e-mail">
+        <input class="email-input" type="email" name="newsletter-email" id="newsletter-mail" placeholder="Ваш e-mail">
         <button class="email-button" type="submit">ПОДПИСАТЬСЯ</button>
       </form>
     </section>
