--- a/index.html
+++ b/index.html
@@ -246,17 +246,17 @@
     </ul>
     <ul class="footer-social-list">
       <li class="footer-social-item">
-        <a class="button media" href="https://t.me/htmlacademy" target="_blank">
+        <a class="media-link" href="https://t.me/htmlacademy" target="_blank">
           <span class="visually-hidden">Telegram</span>
         </a>
       </li>
       <li class="footer-social-item">
-        <a class="button media" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
+        <a class="media-link" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
           <span class="visually-hidden">YouTube</span>
         </a>
       </li>
       <li class="footer-social-item">
-        <a class="button media" href="https://twitter.com/htmlacademy_ru" target="_blank">
+        <a class="media-link" href="https://twitter.com/htmlacademy_ru" target="_blank">
           <span class="visually-hidden">Twitter</span>
         </a>
       </li>
