--- a/4/catalog.html
+++ b/4/catalog.html
@@ -57,6 +57,7 @@
 
     <section class="catalog-products">
       <h2 class="visually-hidden">Список товаров с фильтрами</h2>
+      <p class="product-filter">Фильтр:</p>
       <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
         <fieldset class="catalog-filter-group">
           <legend class="catalog-filter-title">Цвет</legend>
@@ -106,6 +107,7 @@
       </form>
 
       <div class="sorting-container">
+        <p class="product-filter">Сортировка:</p>
       <select class="select-control" aria-label="Сортировка">
         <option value="popular">Популярное</option>
         <option value="new-products">Новинки</option>
@@ -160,7 +162,7 @@
       <ol class="pagination">
         <li class="pagination-item">
           <a class="pagination-link pagination-prev pagination-disabled">
-            <span class="visually-hidden">Назад</span>
+            <span class="back-button">Назад</span>
           </a>
         </li>
         <li class="pagination-item">
@@ -180,7 +182,7 @@
         </li>
         <li class="pagination-item">
           <a class="pagination-link pagination-prev pagination-next" href="#">
-            <span class="visually-hidden">Вперёд</span>
+            <span class="go-button">Вперёд</span>
           </a>
         </li>
       </ol>
